# fastapi-template

./: .coveragec  .cz.yaml  .dockerignore  .env.prod  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose-app.yml  docker-compose-db.yaml  docker-compose-db.yml  docker-compose-dev.yaml  docker-compose-dev.yml  docker-compose-logs.yaml  docker-compose-logs.yml  docker-compose-networks.yml  docker-compose-proxy.yaml  docker-compose-proxy.yml  docker-compose-test.yml  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  entrypoint_dev.sh  entrypoint_test.sh  env.example  fluent-bit.yaml  noxfile.py  pyproject.toml  pytest.ini  pytest.toml  renovate.json  ruff.toml  vector.toml  vector_dev.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  docker-image.yml  docker-pkg.yml
alembic_db/: env.py
alembic_db/versions/: 5ddab3fdbcbe_init.py
docker/: docker-compose-app.yml  docker-compose-db.yml  docker-compose-networks.yml  docker-compose-proxy.yml
docs/: SERVICES.md
src/: app.py  locustfile.py  worker.py
src/app/: exceptions_handler.py  lifespan.py  main.py
src/auth/: adapter.py  constants.py  dependencies.py  domain.py  exceptions.py  export.py  interfaces.py  router.py  security.py  services.py  settings.py
src/config/: settings.py
src/core/: constants.py  database.py  dependencies.py  domain.py  exceptions.py  export.py  interfaces.py  lifespan.py  router.py  rules.py  settings.py  utils.py  validators.py
src/database/: database.py
src/health/: router.py
src/refresh_token/: adapter.py  constants.py  domain.py  exceptions.py  interfaces.py  models.py  (+2 more)
tests/: conftest.py  test_1.py  test_health.py
(+106 files in other folders)
