[project]
name = "fastapi-template"
version = "0.1.0"
description = "High-performance FastAPI template featuring Pydantic V2, Argon2 security, and Dev Container support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "commitizen>=4.13.9",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.2",
    "httptools>=0.7.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "user-agents>=2.2.0",
    "uvicorn[standard]>=0.42.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "import-linter[ui]>=2.11",
    "locust>=2.43.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
